--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -10,6 +10,6 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": "./src"
+    "baseUrl": "src",
   }
 }
