--- a/packages/plugin-mongodb/package.json
+++ b/packages/plugin-mongodb/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --coverage",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "build": "tsc"
   },
   "dependencies": {
     "@pirn/types": "^0.1.0"
