--- a/packages/plugin-mongodb/tsconfig.eslint.json
+++ b/packages/plugin-mongodb/tsconfig.eslint.json
@@ -1,6 +1,6 @@
 {
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "src/__tests__"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "target": "ES2017",
     "module": "commonjs",
