cleanup dist folder before rebuilds

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "jest --coverage",
     "lint": "eslint src",
-    "build": "tsc"
+    "build": "rm -rf ./dist && tsc"
   },
   "dependencies": {
     "@pirn/types": "^0.1.0"
