--- a/packages/plugin-mongodb/package.json
+++ b/packages/plugin-mongodb/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "test": "jest --coverage",
     "lint": "eslint src",
-    "build": "rm -rf ./dist && tsc"
+    "build": "rm -rf ./dist && tsc",
+    "precompile": "tsc --noEmit"
   },
   "dependencies": {
     "@pirn/types": "^0.1.0",
